# MinecraftClone

./: CMakeLists.txt  Config.cpp  Config.h  Cube.cpp  Game.cpp  Game.h  Scene.cpp  Scene.h  UserInterface.cpp  main.cpp
Headers/: Config.h  Cube.h  Game.h  Scene.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/lib/: glfw3.lib
src/: Config.h
src/Core/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
src/Player/: Player.cpp  Player.h
src/Rendering/: Camera.cpp  Camera.h
src/UI/: Scene.cpp  Scene.h  UserInterface.cpp  UserInterface.h
src/Utils/: Math.cpp  Math.h  PerlinNoise.cpp  PerlinNoise.h  Texture.cpp  Texture.h
